FIX: Main Plane Alignment Resize

--- a/drones.css
+++ b/drones.css
@@ -125,7 +125,7 @@ p{
 	background-position: center;
 	background-size:contain;
 	transform:rotateY(180deg);
-	top:-45vw;
+	bottom:50vh;
 	left:0;
 }
 
